<resources>
    <string name="app_name">Hello6</string>
    <string name="enter_destination">Enter Destination</string>
    <string name="your_tickets_passes">Your Tickets / Passes</string>
    <string name="enter_bus_number_or_destination">Enter bus number or destination</string>
    <string name="book_new_pass">Book new pass</string>
    <string name="recharge_wallet">Recharge wallet</string>
    <string name="see_all_passes">See All Passes</string>
    <string name="enter_source">Enter Source</string>
    <string name="title_activity_login">login</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="forgot_password">Forgot Password?</string>
</resources>