<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.417" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="353dp"
        android:layout_height="48dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName|text"
        android:label="@string/enter_bus_number_or_destination"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.122"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:text="@string/your_tickets_passes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.264" />
    <Button
        android:id="@+id/button"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:text="@string/see_all_passes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.348"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.362" />

    <Button
        android:id="@+id/button5"
        android:layout_width="339dp"
        android:layout_height="47dp"
        android:text="@string/book_new_pass"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.717"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/button6"
        android:layout_width="341dp"
        android:layout_height="48dp"
        android:text="@string/recharge_wallet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.402"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.897" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="343dp"
        android:layout_height="53dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:label="@string/enter_source"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="340dp"
        android:layout_height="49dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:label="@string/enter_destination"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
        app:layout_constraintVertical_bias="0.1"
        tools:ignore="LabelFor,SpeakableTextPresentCheck"
        android:autofillHints="" />



</androidx.constraintlayout.widget.ConstraintLayout>